# rag_nan

./: README.md  app_pdf.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
notebook/: 03_Build RAG with docling.ipynb
